[project]
name = "Doppelganger"
version = "1.0.0"
description = "A X.509 certificate cloner including a man-in-the-middle proxy to test if clients correctly validate certificates"
authors = [
    {name = "Malte Heinzelmann", email = "malte@cybaer.ninja"},
]
license-expression = "MIT"
dependencies = ["cryptography"]
requires-python = ">=3.7"

[project.urls]
Homepage = ""
[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
